--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -43,12 +43,12 @@ There are many ways to learn the Clojure language. This tutorial covers the basi
 
 If you'd like to work from a <<xref/../../community/books#,book>>, these are some excellent starting points:
 
-image:https://images-na.ssl-images-amazon.com/images/I/51Bvd25CstL._SL160.jpg[Programming Clojure 3rd edition,link="https://a.co/bSxW6A6",width="130"] image:https://images-na.ssl-images-amazon.com/images/I/51dqOLcPL7L._SL160.jpg[Getting Clojure,link="https://pragprog.com/book/roclojure/getting-clojure",width="130"] image:https://images-na.ssl-images-amazon.com/images/I/6112vbQYDLL._SL160.jpg[Clojure for the Brave and True,link="https://a.co/bsviqV7",width="130"] image:https://images-na.ssl-images-amazon.com/images/I/5122uV93jfL._SL160.jpg[Living Clojure,link="https://a.co/1m2Zt4p",width="130"]
+image:https://images-na.ssl-images-amazon.com/images/I/51Bvd25CstL._SL160.jpg[Programming Clojure 3rd edition,link="https://a.co/bSxW6A6",width="130"] image:https://images-na.ssl-images-amazon.com/images/I/51dqOLcPL7L._SL160.jpg[Getting Clojure,link="https://pragprog.com/titles/roclojure/getting-clojure/",width="130"] image:https://images-na.ssl-images-amazon.com/images/I/6112vbQYDLL._SL160.jpg[Clojure for the Brave and True,link="https://a.co/bsviqV7",width="130"] image:https://images-na.ssl-images-amazon.com/images/I/5122uV93jfL._SL160.jpg[Living Clojure,link="https://a.co/1m2Zt4p",width="130"]
 
 If you'd like to try some practice problems:
 
 * https://4clojure.oxal.org/[4Clojure] - a large set of Clojure practice problems
-* https://exercism.io/tracks/clojure[exercism Clojure track] - larger problems with mentor support
+* https://exercism.org/tracks/clojure[exercism Clojure track] - larger problems with mentor support
 
 Also check out:
 
