update wording in deref

--- a/content/news/2025/05/23/deref.adoc
+++ b/content/news/2025/05/23/deref.adoc
@@ -7,9 +7,9 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure ecosystem (feed: https://clojure.org/feed.xml[RSS]).
 
-A huge thanks to Anton Fonarev who has put in a ton of work aggregating these links for the past 4
-years! It's a lot to keep up with week after week. As you move on to other things, we want you to
-know that your work hasn't gone unnoticed, and we really appreciate your help.
+A huge thanks to Anton Fonarev who has put in a ton of work aggregating these links for the last
+couple of years! It's a lot to keep up with week after week. As you move on to other things, we want
+you to know that your work hasn't gone unnoticed, and we really appreciate your help.
 
 == Podcasts, videos, and media
 
