fix author mention in deref

--- a/content/news/2025/05/23/deref.adoc
+++ b/content/news/2025/05/23/deref.adoc
@@ -28,7 +28,7 @@ you to know that your work hasn't gone unnoticed, and we really appreciate your 
 * https://xtdb.com/blog/building-a-bitemp-index-2-resolution[Building a Bitemporal Index (part 2): "Bitemporal Resolution" · XTDB] - James Henderson
 * https://romanliutikov.com/blog/towards-react-server-components-in-clojure-part-2[Towards React Server Components in Clojure, Part 2] - Roman Liutikov
 * https://clojure-diary.gitlab.io/2025/05/14/wrote-about-java-integration-and-private-functions-in-clojure-book.html[Wrote about Java integration, and private functions in Clojure Book] - Karthikeyan A K
-* https://flexiana.com/news/2025/05/flowstorm-debugging-and-understanding-clojure-code-on-a-new-level[FlowStorm: Debugging and Understanding Clojure Code on a New Level - Flexiana] - Khatia Tchitchinadze
+* https://flexiana.com/news/2025/05/flowstorm-debugging-and-understanding-clojure-code-on-a-new-level[FlowStorm: Debugging and Understanding Clojure Code on a New Level - Flexiana] - Jakub Zika
 * https://blog.fogus.me/clojure/arities-as-proto.html[Arities as pseudo-protocol] - Fogus
 * https://andersmurphy.com/2025/05/20/clojure-sqlite-c-api-with-project-panama-and-coffi.html[Clojure: SQLite C API with project Panama and Coffi] - Anders Murphy
 * https://www.emcken.dk/programming/2025/05/11/clojure-function-definitions/[Consistent code style for Clojure function definitions] - Jacob Emcken
