improve description of clojure-doc.org
Signed-off-by: Sean Corfield <sean@corfield.org>

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -42,7 +42,7 @@ Community:
 * https://practicalli.github.io/[Practicalli] - books and video tutorials on developing with Clojure, it's tooling and workflow
 * https://github.com/ClojureBridge/curriculum[ClojureBridge Curriculum]
 * https://clojuredocs.org[ClojureDocs] - community provided example repository
-* http://clojure-doc.org/[Clojure Documentation] - community-driven documentation site
+* http://clojure-doc.org/[Clojure Guides] - community-driven tutorials, guides, and cookbooks
 * https://cljdoc.org/[cljdoc] - a website building & hosting documentation for Clojure/Script libraries
 * http://clojurekoans.com/[Clojure Koans] (http://clojurescriptkoans.com/[online])
 * http://exercism.io/[exercism.io] - crowd-source code reviews (supports Clojure)
