--- a/content/events/2025/clojure-conj.adoc
+++ b/content/events/2025/clojure-conj.adoc
@@ -11,7 +11,7 @@
 
 Clojure/conj is the oldest gathering of the Clojure community, and the next edition will be November 12-14, 2025, in Charlotte, NC at the Charlotte Convention Center. The Conj is a great place to learn about the most exciting developments in the Clojure ecosystem and talk to a wide range of Clojure users.
 
-Registration is open now at https://2025.clojure-conj.org!
+Registration is open now at https://2025.clojure-conj.org
 
 The main conference will be Nov 13-14 and Nov 12 will feature a day of optional hands-on workshops to kick things off:
 
