Escape all URLs containing `--` and `'`

--- a/content/news/2021/06/11/deref.adoc
+++ b/content/news/2021/06/11/deref.adoc
@@ -21,7 +21,7 @@ We have a bumper crop of Clojure-related podcast episodes this week, put these i
 
 * https://www.cognitect.com/cognicast/160[Cognicast] - Christian Romney interviews Jarrod Taylor from the Datomic team
 * https://getsmarterandmakestuff.com/2021/06/06/podcast-episode-005-michael-fogus/[Get Smarter and Make Stuff] - Craig Andera interviews Michael Fogus from the Clojure core team
-* https://anchor.fm/lostinlambduhhs/episodes/puredanger-Alex-Miller--Clojures-Cool-dad-e12botj[Lost in Lambduhhs] - Jordan Miller interviews Alex Miller from the Clojure core team
+* link:++https://anchor.fm/lostinlambduhhs/episodes/puredanger-Alex-Miller--Clojures-Cool-dad-e12botj++[Lost in Lambduhhs] - Jordan Miller interviews Alex Miller from the Clojure core team
 * https://clojurescriptpodcast.com/[ClojureScript Podcast] - Jacek Schae interviews Tommi Reiman about Malli
 * https://soundcloud.com/defn-771544745/72-chris-badahdah-from-phoenix[defn] - Vijay Kiran and Ray McDermott interview Chris Badahdah about Portal  
 
