--- a/content/news/2021/06/25/deref.adoc
+++ b/content/news/2021/06/25/deref.adoc
@@ -40,7 +40,7 @@ Over the last couple years, the https://calva.io/[Calva] team has been putting a
 * https://danielgregoire.dev/posts/2021-06-18-open-closed-systems-clojure/[Open and Closed Systems with Clojure] - Daniel Gregoire 
 * https://blog.jakubholy.net/2021/simplicity/[What is simplicity in programming and why does it matter?] - Jakub Holý
 * https://www.michaelnygard.com/blog/2021/06/counterfactuals-are-not-causality/[Counterfactuals are not Causality] - Michael Nygard - not about Clojure but worth a read!
-* https://robhaisfield.com/notes/how-i'm-learning-clojure[How I'm learning Clojure] - Rob Haisfield
+* link:++https://robhaisfield.com/notes/how-i'm-learning-clojure++[How I'm learning Clojure] - Rob Haisfield
 * https://ostash.dev/posts/2021-06-18-clojure-metadata/[Clojure metadata] - Roman Ostash
 * https://ostash.dev/posts/2021-06-24-edn-data-notation/[Data notation in Clojure] - Roman Ostash
 * https://blog.jakubholy.net/2021/specific-vs-general-cryogen/[Specific vs. general: Which is better?] - Jakub Holý
