--- a/content/news/2021/10/08/deref.adoc
+++ b/content/news/2021/10/08/deref.adoc
@@ -42,7 +42,7 @@ I've been working on several things, but one ongoing thing we're exploring is so
 
 * https://www.cognitect.com/cognicast/162[Cognicast] - Craig Andera	
 * https://www.therepl.net/episodes/42/[The REPL] - Faster JSON parsing with Erik Assum	
-* https://anchor.fm/lostinlambduhhs/episodes/lambduhh--Jordan-Miller-I-e185vtp[:lambduhh (= Jordan Miller "I" )] - Jordan Miller
+* link:++https://anchor.fm/lostinlambduhhs/episodes/lambduhh--Jordan-Miller-I-e185vtp++[:lambduhh (= Jordan Miller "I" )] - Jordan Miller
 * https://clojurescriptpodcast.com/[ClojureScript podcast] - Config with Alexander Yakushev	
 * https://lispcast.com/the-humble-programmer/[The Humble Programmer] - Eric Normand
 * https://lispcast.com/programmer-as-navigator/[Programmer as Navigator] - Eric Normand
