--- a/content/news/2022/05/27/deref.adoc
+++ b/content/news/2022/05/27/deref.adoc
@@ -12,7 +12,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 * https://soundcloud.com/defn-771544745/84-debbie-and-wilker-lucio[#84 - Debbie and Wilker Lúcio] - defn podcast
 * https://soundcloud.com/clojurestream/nbb-with-michiel-borkent[E71 nbb with Michiel Borkent] - ClojureStream Podcast
 * https://www.youtube.com/watch?v=AvtSFWT5rHs[Clojure Transducers: optimizing my submission to Steve Yegge's farmer/dog/chicken/grain challenge] - Fred Overflow
-* https://anchor.fm/lostinlambduhhs/episodes/ray-mcdermott-Has-birthed--a-repl-acement-e1iuoom[:ray-mcdermott (Has birthed, a repl-acement??)] - Lost in Lambduhhs
+* link:++https://anchor.fm/lostinlambduhhs/episodes/ray-mcdermott-Has-birthed--a-repl-acement-e1iuoom++[:ray-mcdermott (Has birthed, a repl-acement??)] - Lost in Lambduhhs
 
 == Blogs
 
