--- a/content/news/2022/09/09/deref.adoc
+++ b/content/news/2022/09/09/deref.adoc
@@ -15,7 +15,7 @@ I will mention the Clojurists Together https://www.clojuriststogether.org/news/q
 
 == Podcasts and videos
 
-* https://anchor.fm/lostinlambduhhs/episodes/janet-a-carr-Ms--Free-lance-a-lot-frees-her-SaaSy-thoughts-e1niuf3[:janet-a-carr (Ms. Free-lance-a-lot frees her SaaSy thoughts)] - Lost in Lambduhhs by Jordan Miller
+* link:++https://anchor.fm/lostinlambduhhs/episodes/janet-a-carr-Ms--Free-lance-a-lot-frees-her-SaaSy-thoughts-e1niuf3++[:janet-a-carr (Ms. Free-lance-a-lot frees her SaaSy thoughts)] - Lost in Lambduhhs by Jordan Miller
 * https://www.youtube.com/watch?v=ARqU40IHiwo[Starting a fresh Clojure project with Neovim REPL driven development] - Oliver Caldwell
 * https://www.youtube.com/watch?v=QTgdoZ1LSzk[Clojure visual-tools meeting 11: tooling for learning resources, a peek into Data Rabbit] - Sci Cloj
 * https://www.youtube.com/watch?v=pImaXoTPWWA[Transform MS Office into Cloud-savvy Linked Data Microservices With Clojure on .NET (by Bob Calco)] - London Clojurians
