--- a/content/news/2023/11/17/deref.adoc
+++ b/content/news/2023/11/17/deref.adoc
@@ -30,7 +30,7 @@ New releases and tools this week:
 
 * https://github.com/squint-cljs/squint[squint] https://github.com/squint-cljs/squint/blob/main/CHANGELOG.md#0448-2023-11-17[0.4.48] - ClojureScript syntax to JavaScript compiler
 * https://github.com/behrica/msal-helper[msal-helper]  - Just a bit of re-usable code to obtain and cache identity tokens comming from Azure Identtity
-* https://github.com/grzm/awyeah-api[awyeah-api] https://github.com/grzm/awyeah-api/blob/main/CHANGES.markdown#0882--5ecad02--2023-11-14[0.8.82] - Cognitect's aws-api for babashka
+* https://github.com/grzm/awyeah-api[awyeah-api] link:++https://github.com/grzm/awyeah-api/blob/main/CHANGES.markdown#0882--5ecad02--2023-11-14++[0.8.82] - Cognitect's aws-api for babashka
 * https://github.com/taoensso/tempel[tempel] https://github.com/taoensso/tempel/releases/tag/v1.0.0-alpha1[1.0.0-alpha1] - Data security framework for Clojure
 * https://github.com/fractl-io/fractl[fractl] 0.4.7 - Generative AI-powered Programming Language
 * https://github.com/quil/quil[quil] https://github.com/quil/quil/blob/master/RELEASE-NOTES.md#431323[4.3.1323] - Quil
