--- a/content/news/2023/12/08/deref.adoc
+++ b/content/news/2023/12/08/deref.adoc
@@ -36,7 +36,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 New releases and tools this week:
 
-* https://github.com/grzm/awyeah-api[awyeah-api] https://github.com/grzm/awyeah-api/blob/main/CHANGES.markdown#0884--e551334--2023-12-02[0.8.84] - Cognitect's aws-api for babashka
+* https://github.com/grzm/awyeah-api[awyeah-api] link:++https://github.com/grzm/awyeah-api/blob/main/CHANGES.markdown#0884--e551334--2023-12-02++[0.8.84] - Cognitect's aws-api for babashka
 * https://github.com/eval/deps-try[deps-try] https://github.com/eval/deps-try/blob/master/CHANGELOG.md#v0100-2023-12-04[0.10.0] - Try out Clojure libraries via rebel-readline
 * https://github.com/raystubbs/zero[zero]  - Build web components in CLJS
 * https://github.com/SURFnet/apie[apie] 0.1.0 - Apie 🙈 OpenAPI Service Validator
