--- a/content/news/2024/06/01/deref.adoc
+++ b/content/news/2024/06/01/deref.adoc
@@ -9,7 +9,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 == Podcasts and videos
 
-* https://podcasters.spotify.com/pod/show/lostinlambduhhs/episodes/arne-brasseur-tea--travel--taoism-and-HoC-e2kbq1p[:arne-brasseur (tea, travel, taoism and HoC)] - Lost in Lambduhhs
+* link:++https://podcasters.spotify.com/pod/show/lostinlambduhhs/episodes/arne-brasseur-tea--travel--taoism-and-HoC-e2kbq1p++[:arne-brasseur (tea, travel, taoism and HoC)] - Lost in Lambduhhs
 * https://www.youtube.com/watch?v=EvAFEC6n7NI[FDB - a reactive database environment for your files (by Filipe Silva)] - London Clojurians
 
 == Blogs, articles, and projects
