--- a/content/news/2024/07/17/deref.adoc
+++ b/content/news/2024/07/17/deref.adoc
@@ -12,7 +12,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 * https://www.youtube.com/watch?v=XKHFDncWFTI[Clojure visual-tools meeting 25 - keg-party & HTMX] - Sci Cloj
 * https://www.youtube.com/watch?v=eBf7qb-97Bs[Pedestal 9 – API that does nothing] - Clojure Diary
 * https://www.youtube.com/watch?v=S8N5je3nN0c[Coding Injee – First steps] - Clojure Diary
-* https://podcasters.spotify.com/pod/show/lostinlambduhhs/episodes/sophia-velten-category-theory--monads--kung-fu-e2lvg8b[:sophia-velten (category theory, monads, kung-fu) by Lost in Lambduhhs] - LiLpodcast
+* link:++https://podcasters.spotify.com/pod/show/lostinlambduhhs/episodes/sophia-velten-category-theory--monads--kung-fu-e2lvg8b++[:sophia-velten (category theory, monads, kung-fu) by Lost in Lambduhhs] - LiLpodcast
 * https://www.youtube.com/watch?v=u7dtFGL4Sgg[Meetup: Collaborative Learning – Sente] - Los Angeles Clojure Users Group
 
 == Blogs, articles, and projects
