--- a/content/news/2024/10/11/deref.adoc
+++ b/content/news/2024/10/11/deref.adoc
@@ -20,7 +20,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 * https://scicloj.github.io/blog/clojurists-together-project-scicloj-community-building-september-2024-update/[Clojurists Together project - Scicloj community building - September 2024 update] - Daniel Slutsky
 * https://biffweb.com/p/rocksdb-indexes-yakread/[RocksDB indexes are done, open-sourcing Yakread next] - Jacob O'Bryant
 * https://andersmurphy.com/2024/10/07/clojure-synchronous-server-sent-events-with-virtual-threads-and-channels.html[Clojure: Synchronous server sent events with virtual threads and channels] - Anders Murphy
-* https://www.ovistoica.com/blog/20241009T084633--the-best-way-to-handle-svg-icons-in-fullstack-clojure-project__blog_clojure_clojurescript_web[The Best Way To Handle SVG Icons in FullStack Clojure Project] - Ovi Stoica
+* link:++https://www.ovistoica.com/blog/20241009T084633--the-best-way-to-handle-svg-icons-in-fullstack-clojure-project__blog_clojure_clojurescript_web++[The Best Way To Handle SVG Icons in FullStack Clojure Project] - Ovi Stoica
 
 == Libraries and Tools
 
