--- a/content/news/2025/06/27/deref.adoc
+++ b/content/news/2025/06/27/deref.adoc
@@ -23,10 +23,10 @@ The https://2025.clojure-conj.org/[Clojure/conj] 2025 https://2025.clojure-conj.
 * https://code.thheller.com/blog/shadow-cljs/2025/06/24/what-the-heck-just-happened.html[What The Heck Just Happened?] - Thomas Heller
 * https://yamlscript.org/blog/2025-06-24/how-does-ys-work/[How Does YS Work? - YS — YAML Done Wisely] - Ingy döt Net
 * https://code.thheller.com/blog/shadow-cljs/2025/06/25/what-the-heck-are-you-talking-about.html[What The Heck Are You Talking About?] - Thomas Heller
-* https://yamlscript.org/blog/2025-06-25/ai--clojure-functions-in-yaml/[AI + Clojure Functions in YAML - YS — YAML Done Wisely] - Ingy döt Net
+* link:++https://yamlscript.org/blog/2025-06-25/ai--clojure-functions-in-yaml/++[AI + Clojure Functions in YAML - YS — YAML Done Wisely] - Ingy döt Net
 * https://buttondown.com/tensegritics-curiosities/archive/accelerating-maps-with-join-with/[Accelerating maps with join-with] - Christophe Grand
 * https://code.thheller.com/blog/shadow-cljs/2025/06/27/case-study-reagent-with-macro-help.html[Case Study: Reagent With Macro Help] - Thomas Heller
-* https://yamlscript.org/blog/2025-06-27/fun-fridays--rosetta-code/[Fun FridaYS — Rosetta Code - YS — YAML Done Wisely] - Ingy döt Net
+* link:++https://yamlscript.org/blog/2025-06-27/fun-fridays--rosetta-code/++[Fun FridaYS — Rosetta Code - YS — YAML Done Wisely] - Ingy döt Net
 
 == Libraries and Tools
 
