--- a/content/news/2024/02/02/deref.adoc
+++ b/content/news/2024/02/02/deref.adoc
@@ -38,14 +38,14 @@ New releases and tools this week:
 * https://github.com/borkdude/edamame[edamame] https://github.com/borkdude/edamame/blob/master/CHANGELOG.md#1424[1.4.24] - Configurable EDN/Clojure parser with location metadata
 * https://github.com/mpenet/hirundo[hirundo] 0.1.31 - Helidon 4.x RING adapter - using loom/java21+
 * https://github.com/SURFnet/apie[apie] https://github.com/SURFnet/apie/blob/main/changelog.md#v020[0.2.0] - OpenAPI Service Validator
-* https://github.com/cognitect-labs/aws-api[aws-api] https://github.com/cognitect-labs/aws-api/blob/main/CHANGES.md#08692--2024-01-31[0.8.692] - AWS, data driven
+* https://github.com/cognitect-labs/aws-api[aws-api] link:++https://github.com/cognitect-labs/aws-api/blob/main/CHANGES.md#08692--2024-01-31++[0.8.692] - AWS, data driven
 * https://github.com/clj-commons/marginalia[marginalia] https://github.com/clj-commons/marginalia/releases/tag/v0.9.2[0.9.2] - Ultra-lightweight literate programming for clojure inspired by docco
 * https://github.com/clj-commons/lein-marginalia[lein-marginalia] 0.9.2 - A Marginalia plugin to Leiningen
 * https://github.com/clojure-lsp/clojure-lsp[clojure-lsp] https://github.com/clojure-lsp/clojure-lsp/releases/tag/2024.02.01-11.01.59[2024.02.01-11.01.59] - Clojure & ClojureScript Language Server (LSP) implementation
 * https://github.com/mynomoto/sci-koans[sci-koans]  - A port of Clojurescript koans to SCI translated to Portuguese
 * https://github.com/scicloj/clay[clay] https://github.com/scicloj/clay/blob/main/CHANGELOG.md#2-alpha77---2024-02-02[2-alpha77] - A tiny Clojure tool for dynamic workflow of data visualization and literate programming
 * https://github.com/babashka/nbb[nbb] https://github.com/babashka/nbb/blob/main/CHANGELOG.md#12180-2024-01-29[1.2.180] - Scripting in Clojure on Node.js using SCI
-* https://github.com/kbosompem/bb-excel[bb-excel] https://github.com/kbosompem/bb-excel/blob/main/CHANGELOG.md#011--2024-02-01[0.1.1] - Read Excel Files in babashka scripts
+* https://github.com/kbosompem/bb-excel[bb-excel] link:++https://github.com/kbosompem/bb-excel/blob/main/CHANGELOG.md#011--2024-02-01++[0.1.1] - Read Excel Files in babashka scripts
 * https://github.com/imrekoszo/polylith-kaocha[polylith-kaocha] https://github.com/imrekoszo/polylith-kaocha/releases/tag/v0.8.4[0.8.4] - Kaocha-based test runner for Polylith
 * https://github.com/babashka/json[json] https://github.com/babashka/json/blob/main/CHANGELOG.md#016[0.1.6] - JSON abstraction library
 * https://github.com/soulspace-org/overarch[overarch] https://github.com/soulspace-org/overarch/blob/main/Changelog.md#version-080[0.8.0] - A data driven description of software architecture based on UML and the C4 model
