--- a/content/guides/install_clojure.adoc
+++ b/content/guides/install_clojure.adoc
@@ -127,7 +127,7 @@ Alternately, you can use https://github.com/casselc/clj-msi[clj-msi] to install 
 
 Clojure requires Java. Clojure officially supports Java LTS releases (currently Java 8, 11, 17 and 21), but also tries to ensure interim versions work as well. You can use any Java distribution, whether it’s a commercial release from Oracle or an open source version based on OpenJDK (like Temurin). The Clojure tools require only that the `java` command is on the `PATH` or that the `JAVA_HOME` environment variable is set.
 
-If you don't already hava Java installed, we recommend installing Adoptium Temurin 21.
+If you don't already have Java installed, we recommend installing Adoptium Temurin 21.
 
 To use the Adoptium Temurin installers:
 
