add missing link

--- a/content/news/2025/07/06/deref.adoc
+++ b/content/news/2025/07/06/deref.adoc
@@ -52,3 +52,4 @@ New releases and tools this week:
 * https://github.com/scicloj/clay[clay] https://github.com/scicloj/clay/blob/main/CHANGELOG.md[2-beta46] - A REPL-friendly Clojure tool for notebooks and datavis
 * https://github.com/practicalli/nvim-astro5[nvim-astro5] https://github.com/practicalli/nvim-astro5/releases/tag/2025-07-03[2025-07-03] - Neovim 0.11 config for Clojure development, based on AstroNvim v5
 * https://github.com/practicalli/clojure-cli-config[clojure-cli-config] https://github.com/practicalli/clojure-cli-config/releases/tag/2025-07-01[2025-07-01] - User aliases and Clojure CLI configuration for deps.edn based projects
+* https://github.com/babashka/pod-babashka-fswatcher[pod-babashka-fswatcher] https://github.com/babashka/pod-babashka-fswatcher/releases/tag/v0.0.7[0.0.7] - Babashka filewatcher pod
