--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,12 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.12.1/CHANGELOG.md[repo changelog].
 
+=== 1.12.1.1561 (Aug 14, 2025) [[v1.12.1.1561]]
+
+* TDEPS-264 Add `-X:deps basis` - to print the basis for a deps config
+* TDEPS-259 Improve error reporting on deps.edn spec errors
+* Update to latest deps
+
 === 1.12.1.1550 (Jun 3, 2025) [[v1.12.1.1550]]
 
 * `-Sdescribe` - undocumented (prefer using tools.deps APIs instead)
