--- a/content/dev/contributor_agreement.adoc
+++ b/content/dev/contributor_agreement.adoc
@@ -152,6 +152,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Nicola Mometto
 * Nicolas Buduroi
 * Nikita Prokopov
+* Noah Bogart
 * Nola Stowe
 * Oliver Caldwell
 * Paul M Bauer
