add event to deref

--- a/content/news/2025/09/24/deref.adoc
+++ b/content/news/2025/09/24/deref.adoc
@@ -9,6 +9,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 == Upcoming Events
 
+* https://clojureverse.org/t/scicloj-ai-meetup-12-practicing-grain/14739[Scicloj AI Meetup 12: Practicing Grain]: Sep 30
 * https://clojure-south.com/[Clojure South 2025]: Oct 6-7
 * https://scicloj.github.io/macroexpand-2025/[Macroexpand 2025]: Oct 17-18, 24-25
 * https://2025.clojure-conj.org/[Clojure/Conj 2025]: Nov 12-14
