--- a/content/news/2025/10/01/async_virtual_threads.adoc
+++ b/content/news/2025/10/01/async_virtual_threads.adoc
@@ -5,7 +5,7 @@ Alex Miller
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-https://github.com/clojure/core.async[core.async] 1.9.829-alpha2 is now available, which adds support for Java virtual threads (https://clojure.atlassian.net/browse/ASYNC-262(ASYNC-262)).
+https://github.com/clojure/core.async[core.async] 1.9.829-alpha2 is now available, which adds support for Java virtual threads (https://clojure.atlassian.net/browse/ASYNC-262[ASYNC-262]).
 
 Threads must block while waiting on I/O operations to complete. "Parking" allows the platform to unmount and free the underlying thread resource while waiting. This allows users to write "normal" straight line code (without callbacks) while consuming fewer platform resources. Clojure core.async go blocks until now used an analyzer to rewrite code with inversion of control specifically for channel parking operations (the ! async ops like `>!`). Other blocking operations (`!!` channel ops or arbitrary I/O ops) are not allowed.
 
