fix rama link in the deref

--- a/content/news/2025/10/21/deref.adoc
+++ b/content/news/2025/10/21/deref.adoc
@@ -121,7 +121,7 @@ New releases and tools this week:
 * https://github.com/quoll/tiara[tiara] https://github.com/quoll/tiara/releases/tag/v0.5.0[0.5.0] - A small data structure library
 * https://github.com/mpenet/ok-http[ok-http]  - OkHttp clojure wrapper
 * https://github.com/fogus/thneed[thneed]  - An eclectic set of Clojure utilities that I've found useful enough to keep around.
-* https://redplanetlabs.com/download[download] https://github.com/redplanetlabs/rama-release-notes/#120[1.2.0] - The 100x Developer Platform
+* https://redplanetlabs.com/download[rama] https://github.com/redplanetlabs/rama-release-notes/#120[1.2.0] - The 100x Developer Platform
 * https://github.com/scicloj/clay[clay] https://github.com/scicloj/clay/blob/main/CHANGELOG.md[2.0.0] - A REPL-friendly Clojure tool for notebooks and datavis
 * https://github.com/biotz/datastar-js-interop-demo[datastar-js-interop-demo]  - An exploration into Datastar's interoperability with third-party JavaScript libraries
 * https://github.com/biotz/datastar-react-interop-demo[datastar-react-interop-demo]  - An exploration into Datastar's interoperability with third-party React libraries
