Use clj instead of clojure command in deps_and_cli.adoc
Use the same `clj` command that is used in all other snippets on the page.

--- a/content/guides/deps_and_cli.adoc
+++ b/content/guides/deps_and_cli.adoc
@@ -488,14 +488,14 @@ And then start the server by invoking with the alias:
 
 [source,shell]
 ----
-clojure -X:repl-server
+clj -X:repl-server
 ----
 
 If you like, you can also override the default parameters (or add additional options) on the command line:
 
 [source,shell]
 ----
-clojure -X:repl-server :port 51234
+clj -X:repl-server :port 51234
 ----
 
 You can use netcat to connect from another terminal:
