--- a/content/releases/devchangelog.adoc
+++ b/content/releases/devchangelog.adoc
@@ -19,6 +19,10 @@ Note: All dev releases are subject to breaking changes for new work since the pr
 
 == Release 1.12.x
 
+=== 1.12.4 (Dec 10, 2025) [[v1.12.4]]
+
+* https://clojure.atlassian.net/browse/CLJ-2924[CLJ-2924] - LazySeq - fix visibility issues with non-volatile reads
+
 === 1.12.3 (Sep 25, 2025) [[v1.12.3]]
 
 https://clojure.org/news/2025/09/25/clojure-1-12-3[Release Notes]
