--- a/content/releases/downloads.adoc
+++ b/content/releases/downloads.adoc
@@ -15,7 +15,7 @@ These tools allow you to start a REPL for interactive use, download Clojure libr
 ====
 
 [[stable]]
-== Stable Release: 1.12.3 (Sep 25, 2025)
+== Stable Release: 1.12.4 (Dec 10, 2025)
 
 Include the release in your project using the following coordinates:
 
@@ -23,19 +23,19 @@ deps.edn coordinate:
 
 [source,clojure]
 ----
-org.clojure/clojure {:mvn/version "1.12.3"}
+org.clojure/clojure {:mvn/version "1.12.4"}
 ----
 
 Leiningen dependency:
 
 [source,clojure]
 ----
-[org.clojure/clojure "1.12.3"]
+[org.clojure/clojure "1.12.4"]
 ----
 
 === Dependencies
 
-Clojure 1.12.3 depends on the following core libraries:
+Clojure 1.12.4 depends on the following core libraries:
 
  * `org.clojure/spec.alpha {:mvn/version "0.5.238"}` (https://repo1.maven.org/maven2/org/clojure/spec.alpha/0.5.238/spec.alpha-0.5.238.jar[jar])
  * `org.clojure/core.specs.alpha {:mvn/version "0.4.74"}` (https://repo1.maven.org/maven2/org/clojure/core.specs.alpha/0.4.74/core.specs.alpha-0.4.74.jar[jar])
@@ -63,14 +63,14 @@ deps.edn coordinate:
 
 [source,clojure]
 ----
-org.clojure/clojure {:mvn/version "1.12.0-rc2"}
+org.clojure/clojure {:mvn/version "1.13.0-alpha1"}
 ----
 
 Leiningen dependency:
 
 [source,clojure]
 ----
-[org.clojure/clojure "1.12.0-rc2"]
+[org.clojure/clojure "1.13,0-alpha1"]
 ----
 
 * https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.13.0*[Clojure 1.13.0 pre-release builds]
@@ -78,7 +78,7 @@ Leiningen dependency:
 * Dependencies:
 ** `org.clojure/spec.alpha {:mvn/version "0.5.238"}`
 ** `org.clojure/core.specs.alpha {:mvn/version "0.4.74"}`
-* Requirements: Java 8 or higher (recommended: Java 25)
+* Requirements: Java 17 or higher (recommended: Java 25)
 ////
 
 == Older Releases
@@ -98,7 +98,7 @@ Specify the version of Clojure that you want in your deps.edn:
 [source,clojure]
 ----
 {:deps
- {org.clojure/clojure {:mvn/version "1.12.3"}}}
+ {org.clojure/clojure {:mvn/version "1.12.4"}}}
 ----
 
 === Via Leiningen
@@ -107,7 +107,7 @@ Modify the dependencies and repositories sections of your https://leiningen.org/
 [source,clojure]
 ----
 ; under dependencies, select the release of clojure that you want
-:dependencies [[org.clojure/clojure "1.12.3"]]
+:dependencies [[org.clojure/clojure "1.12.4"]]
 ----
 
 == Using Clojure SNAPSHOT releases
