--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,10 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.12.1/CHANGELOG.md[repo changelog].
 
+=== 1.12.4.1582 (Dec 10, 2025) [[v1.12.4.1582]]
+
+* Update to Clojure 1.12.4
+
 === 1.12.3.1577 (Sep 25, 2025) [[v1.12.3.1577]]
 
 * Update to Clojure 1.12.3
