Add Griffin Bank to companies list

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -187,6 +187,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Gaiwan
 * GetContented
 * GetSet
+* Griffin Bank
 * Gmaven
 * GoCatch
 * Gofore
